--- a/1_docker_terraform/ingest_data.ipynb
+++ b/1_docker_terraform/ingest_data.ipynb
@@ -492,7 +492,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python_3_12_de",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -506,7 +506,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
